test/error/ast/ImportNameDuplicate.mod
MODULE ImportNameDuplicate;
IMPORT Out, Out;
END ImportNameDuplicate.
